# haat-bazaar-backend

./: .env  .gitignore  2  Cargo.toml  schema_dump.sql
data/: haatbazar.sqlite3
migrations/2023-11-21-145334_create_categories/: up.sql
migrations/2023-11-21-145829_create_products/: up.sql
migrations/2023-11-21-145850_create_customers/: up.sql
migrations/2023-11-21-145905_create_orders/: up.sql
migrations/2023-11-21-145914_create_order_details/: down.sql  up.sql
migrations/2023-11-23-142415_create_cart/: up.sql
migrations/2023-11-23-142423_create_payments/: up.sql
migrations/2023-11-23-142431_create_shipments/: down.sql  up.sql
migrations/2024-01-06-134020_product_images/: up.sql
migrations/2024-02-14-153335_create_invoice/: up.sql
migrations/2024-02-14-153342_create_invoice_item/: up.sql
migrations/2024-06-15-035204_create_cart/: up.sql
migrations/2024-07-29-072734_create_customers/: up.sql
migrations/2025-03-21-043923_create_user/: up.sql
migrations/2025-03-21-044255_create_cart/: up.sql
migrations/2025-03-21-044417_create_order/: up.sql
migrations/2025-03-21-044516_create_order_items/: up.sql
migrations/2025-03-21-044726_create_payment/: down.sql  up.sql
migrations/2025-03-21-044822_create_invoice/: up.sql
migrations/2025-03-21-044945_create_invoice_items/: down.sql
migrations/2025-03-21-045053_create_shipment/: up.sql
migrations/2025-03-21-050638_add_transaction_id/: down.sql  up.sql
migrations/2025-03-21-051430_create_product_images/: down.sql
migrations/2025-04-18-014917_add_location_to_user/: down.sql  up.sql
migrations/2025-04-19-033858_add_order_quantity/: down.sql  up.sql
migrations/2025-04-22-031341_add_order_status/: down.sql  up.sql
migrations/2025-04-25-025416_add_tendered_col/: down.sql  up.sql
src/: config.rs  main.rs  routes.rs  schema.rs
(+101 files in other folders)
