[package]
name = "haatbazar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenvy = "0.15.7"
regex = "1.10.2"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", default-features = false, features = ["v4"] }
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
chrono = "0.4.31"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
actix-multipart = "0.6.1"
actix-files = "0.6.6"
