[package]
name = "haatbazar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenvy = "0.15.7"
regex = "1.10.2"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.16.0", default-features = false, features = ["v4"] }
diesel = { version = "2.1.4", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
chrono = "0.4.31"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
actix-multipart = "0.7.2"
actix-files = "0.6.6"
reqwest = { version = "0.12.5", features = ["json"] }
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
log = "0.4.27"
fcm-service = "0.2.3"
anyhow = "1.0.98"
tokio = "1.46.1"
async-trait = "0.1.88"
genpdf = "0.2.0"
lettre = { version = "0.11.18", features = ["tokio1-native-tls", "smtp-transport", "builder"] }


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
